testsuite/bsc.bugs/github/gh894/Test.bs.bsc-out.expected
checking package dependencies
compiling Test.bs
Error: "Test.bs", line 31, column 16: (T0032)
  This expression requires the following context which could not be resolved:
    Test.BuildVector ((FloatingPoint.FloatingPoint a__ b__ -> FloatingPoint.FloatingPoint a__ b__) -> (FloatingPoint.FloatingPoint a__ b__ -> FloatingPoint.FloatingPoint a__ b__) -> (FloatingPoint.FloatingPoint a__ b__ -> FloatingPoint.FloatingPoint a__ b__) -> (FloatingPoint.FloatingPoint a__ b__ -> FloatingPoint.FloatingPoint a__ b__) -> (FloatingPoint.FloatingPoint a__ b__ -> FloatingPoint.FloatingPoint a__ b__) -> Vector.Vector c__ (FloatingPoint.FloatingPoint 8 23))
  An instance for this context exists, but it depends on the following context
  for which there is no instance:
    Test.BuildVector' 4 (FloatingPoint.FloatingPoint a__ b__ -> FloatingPoint.FloatingPoint a__ b__) (Vector.Vector c__ (FloatingPoint.FloatingPoint 8 23))
